<resources>
    <string name="app_name">CarInsuranceApp</string>
    <string name="action_settings">Settings</string>

    <!--menu-->
    <string name="log_incident">Log new incident</string>
    <string name="view_incidents">View past incidents</string>
    <string name="my_information">My information</string>
    <string name="my_insurance_info">My insurance information</string>
    <string name="map">Map</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>


    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Buttons-->
    <string name="button_submit">Submit</string>

    <!--Log Incident-->
    <string name="text_incident_date">Date</string>
    <string name="text_incident_time">Time</string>
    <string name="text_incident_description">Describe the incident</string>
    <string name="text_incident_location">Incident_location // don\'t know how to do this yet :)</string>

    <!--My Insurance info-->
    <string name="add_car_button">Add CAr</string>

    <!--Add new car-->
    <string name="add_car">Add new car</string>

    <!--Show Incident-->
    <string name="incident_name">Random incident</string>
    <string name="title_activity_map">Map</string>

    <!--input database personal info-->
    <string name="text_enter_forename">First name</string>
    <string name="text_enter_surname">Last name</string>
    <string name="text_enter_date_of_birth">Date of birth DD/MM/YYYY</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>
    <string name="button_next">Next</string>

    <!--input database insurance info-->
    <string name="text_car_info">Input car information</string>
    <string name="text_input_car_model">Model</string>
    <string name="text_input_car_make">Make</string>
    <string name="text_input_car_registration_num">Registration number</string>
    <string name="button_edit">Edit</string>
    <string name="new_incident_switch">Use current location from</string>

    <!-- Disclaimer -->
    <string name="disclaimer_privacy">By submitting your data, you are agreeing with Crashalytics\' policies of data security and protection</string>

    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="no_address_found">no_address_found</string>
    <string name="address_found">address_found</string>
    <string name="text_incident_location_label">Location</string>
    <string name="text_incident_pictures">Take some pictures of the incident</string>
    <string name="button_take_picture">Take picture</string>
    <string name="text_incident_car">Choose car</string>
    <string name="button_delete_pictures">Delete pictures</string>
    <string name="edit_personal_info">Edit information</string>
    <string name="text_first_name_edit_label">First name</string>
    <string name="text_last_name_edit_label">Last name</string>
    <string name="button_edit_personal_submit">Submit changes</string>
    <string name="button_use_address_in_new_incident">Use selected location in Log new incident</string>


</resources>
